apps/radarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.8.3
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /mnt/tank/Downloads
            - name: movies
              mountPath: /mnt/tank/Movies
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radarr
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
