apps/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
